<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<!-- Tycho requires Maven 3 -->
	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<parent>
		<groupId>org.eclipse.xtext.example.fowlerdsl</groupId>
		<artifactId>org.eclipse.xtext.example.fowlerdsl.repository.parent</artifactId>
		<version>0.1.0-SNAPSHOT</version>
		<relativePath>../../releng/org.eclipse.xtext.example.fowlerdsl.repository.parent/pom.xml</relativePath>
	</parent>

	<groupId>org.eclipse.xtext.example.fowlerdsl</groupId>
	<artifactId>org.eclipse.xtext.example.fowlerdsl.parent</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<permet-local-targetrepository>file:../../releng/org.eclipse.xtext.example.fowlerdsl.repository/target/repository</permet-local-targetrepository>
		<project.encoding>UTF-8</project.encoding>
		<file.encoding>${project.encoding}</file.encoding>
		<project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
		<maven-resources-plugin.version>2.6</maven-resources-plugin.version>
		<maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
		<maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
		<maven-install-plugin.version>2.4</maven-install-plugin.version>
		<maven-site-plugin.version>3.3</maven-site-plugin.version>
		<maven-surefire-plugin.version>2.15</maven-surefire-plugin.version>
		<maven-scm-plugin.version>1.8.1</maven-scm-plugin.version>
		<maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
		<maven-release-plugin.version>2.4.1</maven-release-plugin.version>
		<maven-checkstyle-plugin.version>2.10</maven-checkstyle-plugin.version>
		<findbugs-maven-plugin.version>2.5.2</findbugs-maven-plugin.version>
		<maven-pmd-plugin.version>3.0.1</maven-pmd-plugin.version>
		<maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
		<build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
		<eclipse-signing-maven-plugin.version>1.0.5</eclipse-signing-maven-plugin.version>
		<fornax-oaw-m2-plugin.version>3.4.0</fornax-oaw-m2-plugin.version>
		<xtend-maven-plugin.version>2.4.3</xtend-maven-plugin.version>
		<xtend-library.version>2.4.3</xtend-library.version>
		<jacoco-maven-plugin.version>0.6.3.201306030806</jacoco-maven-plugin.version>
		<junit-version>4.11</junit-version>
		<local-build-platform.version>[3.9,4.4)</local-build-platform.version>
		<encodingArgs>-Dfile.encoding=${file.encoding}</encodingArgs>
		<ui.test.vmargs></ui.test.vmargs>
		<coverageAgent></coverageAgent>
		<it.coverage.argLine></it.coverage.argLine>
	</properties>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!-- TYCHO -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>${project.encoding}</encoding>
						<meminitial>128m</meminitial>
						<maxmem>1024m</maxmem>
						<source>6.0</source>
						<target>6.0</target>
						<verbose>true</verbose>
					</configuration>
				</plugin>
				<!-- enable source bundle generation -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<useUIHarness>false</useUIHarness>
						<useUIThread>false</useUIThread>
						<argLine>${encodingArgs} ${ui.test.vmargs} ${coverageAgent}</argLine><!-- different for mac/not mac -->
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<!-- APACHE MAVEN PLUGINS -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
					<configuration>
						<encoding>${project.encoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>${maven-antrun-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven-deploy-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${maven-install-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>${maven-site-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<configuration>
						<argLine>${coverageAgent}</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven-clean-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-scm-plugin</artifactId>
					<version>${maven-scm-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven-assembly-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<version>${maven-release-plugin.version}</version>
					<configuration>
						<preparationGoals>clean -DnewVersion=${releaseVersion}
							-Dprudent=true
							org.eclipse.tycho:tycho-versions-plugin:set-version
							verify
							scm:checkin</preparationGoals>
						<arguments>-Prelease</arguments>
					</configuration>
				</plugin>
				<!-- OTHER PLUGINS -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${maven-checkstyle-plugin.version}</version>
					<configuration>
						<excludes>**org/eclipse.**:**/internal/**:**antlr**:**/parseTree**:**Abstract**RuntimeModule**:**SetupGenerated**:**Abstract**Validator**:
							**GrammarAccess**:**Abstract**UiModule**:**Abstract**ProposalProvider**:**/mm/**::**Abstract**SemanticSequencer**</excludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>${findbugs-maven-plugin.version}</version>
					<configuration>
						<findbugsXmlOutput>true</findbugsXmlOutput>
						<failOnError>false</failOnError>
						<excludeFilterFile>${session.executionRootDirectory}/../org.eclipse.xtext.example.fowlerdsl.parent/findbugs-exclude.xml</excludeFilterFile>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>${maven-pmd-plugin.version}</version>
					<configuration>
						<excludeRoots>
							<excludeRoot>src-gen</excludeRoot>
							<excludeRoot>xtend-gen</excludeRoot>
						</excludeRoots>							
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>${build-helper-maven-plugin.version}</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>src-gen</source>
								</sources>
								<sources>
									<source>${project.build.directory}/xtend-gen</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.dash.maven</groupId>
					<artifactId>eclipse-signing-maven-plugin</artifactId>
					<version>${eclipse-signing-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.fornax.toolsupport</groupId>
					<artifactId>fornax-oaw-m2-plugin</artifactId>
					<version>${fornax-oaw-m2-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtend-maven-plugin.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<!-- need to prefix by basedir to generate to currently built module -->
						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
					</configuration>
					<dependencies>
						<!-- these dependencies are contributed in Eclipse by the "Xtend Library" classpath container -->
						<dependency>
							<groupId>org.eclipse.xtend</groupId>
							<artifactId>org.eclipse.xtend.lib</artifactId>
							<version>${xtend-library.version}</version>
							<type>pom</type>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<pluginRepositories>
		<pluginRepository>
			<id>sonatype</id>
			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>sonatype_snapshot</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<!-- Fornax Workflow Runner plugin -->
		<pluginRepository>
			<id>fornax</id>
			<url>http://www.fornax-platform.org/m2/repository</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	
	<!-- to resolve this warning "[WARNING] Unable to locate Source XRef to 
		link to - DISABLED". With this warning PMD validation will work fine. -->
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>${maven-jxr-plugin.version}</version>
			</plugin>
		</plugins>
	</reporting>	

	<profiles>
		<profile>
			<id>local-build</id>
			<activation>
				<property>
					<name>local-build</name>
				</property>
			</activation>
			<repositories>
				<repository>
					<id>permet-dependencies</id>
					<layout>p2</layout>
					<url>${permet-local-targetrepository}</url>
				</repository>
			</repositories>
		</profile>
		<profile>
			<id>skip-ui-tests</id>
			<activation>
				<property>
					<name>skip-ui-tests</name>
				</property>
			</activation>
			<properties>
				<tycho.surefire.skipUiTest>true</tycho.surefire.skipUiTest>
			</properties>
		</profile>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<name>mac os x</name>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<name>not-mac</name>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>sonarLocal</id>
			<properties>
				<sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
				<sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
				<sonar.jdbc.username>sonar</sonar.jdbc.username>
				<sonar.jdbc.password>sonar</sonar.jdbc.password>
				<sonar.host.url>http://localhost:9000/</sonar.host.url>
				<sonar.java.source>1.6</sonar.java.source>
				<sonar.java.target>1.6</sonar.java.target>
				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
				<sonar.skippedModules>org.eclipse.xtext.example.fowlerdsl.targetplatform,org.eclipse.xtext.example.fowlerdsl.parent,org.eclipse.xtext.example.fowlerdsl.mm,org.mod4j.dsl.businessdomain.mm,org.eclipse.xtext.example.fowlerdsl.testhelper</sonar.skippedModules>
			</properties>
		</profile>
		<profile>
			<id>sonarRemote</id>
			<properties>
				<sonar.jdbc.url>jdbc:mysql://ec2-50-19-206-165.compute-1.amazonaws.com:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
				<sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
				<sonar.jdbc.username>sonar</sonar.jdbc.username>
				<sonar.jdbc.password>sonar</sonar.jdbc.password>
				<sonar.host.url>http://ec2-50-19-206-165.compute-1.amazonaws.com:9000/sonar</sonar.host.url>
				<sonar.java.source>1.6</sonar.java.source>
				<sonar.java.target>1.6</sonar.java.target>
				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
				<sonar.skippedModules>org.eclipse.xtext.example.fowlerdsl.targetplatform,org.eclipse.xtext.example.fowlerdsl.parent,org.eclipse.xtext.example.fowlerdsl.mm,org.mod4j.dsl.businessdomain.mm,org.eclipse.xtext.example.fowlerdsl.testhelper</sonar.skippedModules>
			</properties>
		</profile>
		<profile>
			<id>noCodeCoverage</id>
			<activation>
				<property>
					<name>!codeCoverage</name>
				</property>
			</activation>
			<properties>
				<coverageAgent></coverageAgent>
			</properties>
		</profile>
		<profile>
			<id>codeCoverage</id>
			<properties>
				<jacoco.propertyName>coverageAgent</jacoco.propertyName>
				<jacoco.append>true</jacoco.append>
				<jacoco.destFile>${session.executionRootDirectory}/../org.eclipse.xtext.example.fowlerdsl.parent/target/jacoco.exec</jacoco.destFile>
				<jacoco.it.destFile>${session.executionRootDirectory}/../org.eclipse.xtext.example.fowlerdsl.parent/target/jacoco_it.exec</jacoco.it.destFile>
				<!--jacoco.sessionId>junit4runnerSession</jacoco.sessionId -->
				<!--jacoco.dumpOnExit>true</jacoco.dumpOnExit -->
				<!--jacoco.output>file</jacoco.output -->
				<!--jacoco.address>localhost</jacoco.address -->
				<!--jacoco.port>9999</jacoco.port -->
				<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
				<sonar.jacoco.reportPath>${jacoco.destFile}</sonar.jacoco.reportPath>
				<sonar.surefire.reportsPath>../${project.artifactId}.tests/target/surefire-reports/</sonar.surefire.reportsPath>
				<sonar.jacoco.itReportPath>${jacoco.it.destFile}</sonar.jacoco.itReportPath>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco-maven-plugin.version}</version>
						<executions>
							<execution>
								<id>pre-unit-test</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>pre-integration-test</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<destFile>${jacoco.it.destFile}</destFile>
									<propertyName>it.coverage.argLine</propertyName>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>yourkit-profile</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>-agentpath:"${yourkit.home}\bin\win32\yjpagent.dll"</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.xtend</groupId>
				<artifactId>org.eclipse.xtend.lib</artifactId>
				<version>${xtend-library.version}</version>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
